# HamoKara

./: .Hamo.java.swp  CMakeCache.txt  CMakeLists.txt  CheckAccuracy.java  CheckAccuracy2.java  CheckAccuracy_hmm.java  CheckAccuracy_hmm2.java  CheckAccuracy_hmm3.java  CheckHamo2_all.java  CheckHamo3_all.java  CheckHamo4_all.java  CheckHamo_all.java  CheckHmm2_all.java  CheckHmm3_all.java  CheckHmm_all.java  CompoundHMMsViterbiCalculator.java  Dio4J.java  HamoKara  Makefile  Midi.xml  OpdfHarmony.java  R00088G2.MID  aaaa.mid  cmake_install.cmake  config.xml  copying.txt  dio.cpp  dioexe  module_Dio.java  readme.md
checkin/: C.txt  C_hmm.txt  Samenum_hamo.txt  Samenum_hamoR.txt  hamo_all.txt  hamo_ave.txt  hamo_same.txt  hamo_sameR.txt  hamo_same_hist.txt  hamo_unizon.txt  hmm_08.txt  hmm_08_only.txt  hmm_aij.txt  hmm_aij_else.txt  hmm_aij_same.txt  hmm_all.txt  hmm_collect.txt  hmm_collect5.txt  hmm_same.txt  hmm_same5.txt  hmm_sameR.txt  hmm_same_hist.txt  hmm_same_hist_main.txt  hmm_same_per.txt  hmm_unizon.txt  hmm_unizon_collect.txt  hmm_unizon_only.txt  result_match.txt  result_match2.txt  result_match_hmm.txt
